// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BooleanWidget > renders checked 1`] = `
<div>
  <div
    class="blong-boolean p-checkbox p-component p-highlight"
    data-p-disabled="false"
    data-p-highlight="true"
    data-pc-name="checkbox"
    data-pc-section="root"
  >
    <input
      aria-invalid="false"
      checked=""
      class="p-checkbox-input"
      data-pc-section="input"
      id="testField"
      type="checkbox"
    />
    <div
      class="p-checkbox-box"
      data-p-disabled="false"
      data-p-highlight="true"
      data-pc-section="box"
    >
      <span
        class="p-checkbox-icon pi pi-check"
        data-pc-section="icon"
      />
    </div>
  </div>
</div>
`;

exports[`BooleanWidget > renders disabled 1`] = `
<div>
  <div
    class="blong-boolean p-checkbox p-component p-disabled"
    data-p-disabled="true"
    data-p-highlight="false"
    data-pc-name="checkbox"
    data-pc-section="root"
  >
    <input
      aria-invalid="false"
      class="p-checkbox-input"
      data-pc-section="input"
      disabled=""
      id="testField"
      type="checkbox"
    />
    <div
      class="p-checkbox-box"
      data-p-disabled="true"
      data-p-highlight="false"
      data-pc-section="box"
    />
  </div>
</div>
`;

exports[`BooleanWidget > renders unchecked 1`] = `
<div>
  <div
    class="blong-boolean p-checkbox p-component"
    data-p-disabled="false"
    data-p-highlight="false"
    data-pc-name="checkbox"
    data-pc-section="root"
  >
    <input
      aria-invalid="false"
      class="p-checkbox-input"
      data-pc-section="input"
      id="testField"
      type="checkbox"
    />
    <div
      class="p-checkbox-box"
      data-p-disabled="false"
      data-p-highlight="false"
      data-pc-section="box"
    />
  </div>
</div>
`;

exports[`CurrencyWidget > renders 1`] = `
<div>
  <span
    class="blong-currency w-full  p-inputnumber p-component p-inputwrapper"
    data-pc-name="inputnumber"
    data-pc-section="root"
  >
    <input
      class="text-right p-inputnumber-input p-inputtext p-component"
      data-pc-name="inputtext"
      data-pc-section="root"
      id="testField"
      inputmode="decimal"
      name="testField"
      role="spinbutton"
      type="text"
      value=""
    />
  </span>
</div>
`;

exports[`CurrencyWidget > renders with value 1`] = `
<div>
  <span
    class="blong-currency w-full  p-inputnumber p-component p-inputwrapper p-inputwrapper-filled"
    data-pc-name="inputnumber"
    data-pc-section="root"
  >
    <input
      aria-valuenow="99.99"
      class="text-right p-inputnumber-input p-inputtext p-component p-filled"
      data-pc-name="inputtext"
      data-pc-section="root"
      id="testField"
      inputmode="decimal"
      name="testField"
      role="spinbutton"
      type="text"
      value="99.99"
    />
  </span>
</div>
`;

exports[`DateTimeWidget > renders 1`] = `
<div>
  <span
    class="blong-datetime w-full  p-calendar p-component p-inputwrapper p-calendar-w-btn p-calendar-w-btn-right"
    data-pc-name="calendar"
    data-pc-section="root"
  >
    <input
      aria-autocomplete="none"
      aria-controls="pr_id_87_panel"
      aria-expanded="false"
      aria-haspopup="dialog"
      autocomplete="off"
      class="p-inputtext p-component"
      data-pc-name="inputtext"
      data-pc-section="root"
      id="testField"
      inputmode="none"
      role="combobox"
      type="text"
    />
    <button
      aria-controls="pr_id_87_panel"
      aria-expanded="false"
      aria-haspopup="dialog"
      aria-label="Choose Date"
      class="p-datepicker-trigger p-button p-component p-button-icon-only"
      data-pc-name="button"
      data-pc-section="root"
      tabindex="-1"
      type="button"
    >
      <span
        class="p-button-icon p-c pi pi-calendar"
        data-pc-section="icon"
      />
      <span
        class="p-button-label p-c"
        data-pc-section="label"
      >
         
      </span>
    </button>
  </span>
</div>
`;

exports[`DateWidget > renders 1`] = `
<div>
  <span
    class="blong-date w-full  p-calendar p-component p-inputwrapper p-calendar-w-btn p-calendar-w-btn-right"
    data-pc-name="calendar"
    data-pc-section="root"
  >
    <input
      aria-autocomplete="none"
      aria-controls="pr_id_29_panel"
      aria-expanded="false"
      aria-haspopup="dialog"
      autocomplete="off"
      class="p-inputtext p-component"
      data-pc-name="inputtext"
      data-pc-section="root"
      id="testField"
      inputmode="none"
      role="combobox"
      type="text"
    />
    <button
      aria-controls="pr_id_29_panel"
      aria-expanded="false"
      aria-haspopup="dialog"
      aria-label="Choose Date"
      class="p-datepicker-trigger p-button p-component p-button-icon-only"
      data-pc-name="button"
      data-pc-section="root"
      tabindex="-1"
      type="button"
    >
      <span
        class="p-button-icon p-c pi pi-calendar"
        data-pc-section="icon"
      />
      <span
        class="p-button-label p-c"
        data-pc-section="label"
      >
         
      </span>
    </button>
  </span>
</div>
`;

exports[`DateWidget > renders readOnly 1`] = `
<div>
  <span
    class="blong-date w-full  p-calendar p-component p-inputwrapper p-calendar-w-btn p-calendar-w-btn-right p-calendar-disabled p-inputwrapper-filled"
    data-pc-name="calendar"
    data-pc-section="root"
  >
    <input
      aria-autocomplete="none"
      aria-controls="pr_id_61_panel"
      aria-expanded="false"
      aria-haspopup="dialog"
      autocomplete="off"
      class="p-inputtext p-component p-disabled"
      data-pc-name="inputtext"
      data-pc-section="root"
      disabled=""
      id="testField"
      inputmode="none"
      readonly=""
      role="combobox"
      type="text"
    />
    <button
      aria-controls="pr_id_61_panel"
      aria-expanded="false"
      aria-haspopup="dialog"
      aria-label="Choose Date"
      class="p-datepicker-trigger p-button p-component p-button-icon-only p-disabled"
      data-pc-name="button"
      data-pc-section="root"
      disabled=""
      tabindex="-1"
      type="button"
    >
      <span
        class="p-button-icon p-c pi pi-calendar"
        data-pc-section="icon"
      />
      <span
        class="p-button-label p-c"
        data-pc-section="label"
      >
         
      </span>
    </button>
  </span>
</div>
`;

exports[`DateWidget > renders with value 1`] = `
<div>
  <span
    class="blong-date w-full  p-calendar p-component p-inputwrapper p-calendar-w-btn p-calendar-w-btn-right p-inputwrapper-filled"
    data-pc-name="calendar"
    data-pc-section="root"
  >
    <input
      aria-autocomplete="none"
      aria-controls="pr_id_45_panel"
      aria-expanded="false"
      aria-haspopup="dialog"
      autocomplete="off"
      class="p-inputtext p-component"
      data-pc-name="inputtext"
      data-pc-section="root"
      id="testField"
      inputmode="none"
      role="combobox"
      type="text"
    />
    <button
      aria-controls="pr_id_45_panel"
      aria-expanded="false"
      aria-haspopup="dialog"
      aria-label="Choose Date"
      class="p-datepicker-trigger p-button p-component p-button-icon-only"
      data-pc-name="button"
      data-pc-section="root"
      tabindex="-1"
      type="button"
    >
      <span
        class="p-button-icon p-c pi pi-calendar"
        data-pc-section="icon"
      />
      <span
        class="p-button-label p-c"
        data-pc-section="label"
      >
         
      </span>
    </button>
  </span>
</div>
`;

exports[`DropdownWidget > renders readOnly 1`] = `
<div>
  <span
    class="blong-display"
  >
    B label
  </span>
</div>
`;

exports[`DropdownWidget > renders with static options 1`] = `
<div>
  <div
    class="blong-dropdown w-full  p-dropdown p-component p-inputwrapper p-dropdown-clearable p-inputwrapper-filled"
    data-p-disabled="false"
    data-p-focus="false"
    data-pc-name="dropdown"
    data-pc-section="root"
    data-testid="testField"
  >
    <div
      class="p-hidden-accessible"
      data-pc-section="hiddenselectedmessage"
    >
      <input
        aria-haspopup="listbox"
        data-pc-section="input"
        id="testField"
        readonly=""
        tabindex="0"
        type="text"
        value="Option A"
      />
    </div>
    <div
      class="p-hidden-accessible p-dropdown-hidden-select"
      data-pc-section="hiddenselectedmessage"
    >
      <select
        data-pc-section="select"
        tabindex="-1"
      >
        <option
          data-pc-section="option"
          selected=""
          value="a"
        >
          Option A
        </option>
      </select>
    </div>
    <span
      class="p-dropdown-label p-inputtext"
      data-pc-section="input"
      tabindex="-1"
    >
      Option A
    </span>
    <svg
      aria-label="Clear"
      class="p-icon p-dropdown-clear-icon p-clickable"
      data-pc-section="clearicon"
      fill="none"
      height="14"
      tabindex="0"
      viewBox="0 0 14 14"
      width="14"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8.01186 7.00933L12.27 2.75116C12.341 2.68501 12.398 2.60524 12.4375 2.51661C12.4769 2.42798 12.4982 2.3323 12.4999 2.23529C12.5016 2.13827 12.4838 2.0419 12.4474 1.95194C12.4111 1.86197 12.357 1.78024 12.2884 1.71163C12.2198 1.64302 12.138 1.58893 12.0481 1.55259C11.9581 1.51625 11.8617 1.4984 11.7647 1.50011C11.6677 1.50182 11.572 1.52306 11.4834 1.56255C11.3948 1.60204 11.315 1.65898 11.2488 1.72997L6.99067 5.98814L2.7325 1.72997C2.59553 1.60234 2.41437 1.53286 2.22718 1.53616C2.03999 1.53946 1.8614 1.61529 1.72901 1.74767C1.59663 1.88006 1.5208 2.05865 1.5175 2.24584C1.5142 2.43303 1.58368 2.61419 1.71131 2.75116L5.96948 7.00933L1.71131 11.2675C1.576 11.403 1.5 11.5866 1.5 11.7781C1.5 11.9696 1.576 12.1532 1.71131 12.2887C1.84679 12.424 2.03043 12.5 2.2219 12.5C2.41338 12.5 2.59702 12.424 2.7325 12.2887L6.99067 8.03052L11.2488 12.2887C11.3843 12.424 11.568 12.5 11.7594 12.5C11.9509 12.5 12.1346 12.424 12.27 12.2887C12.4053 12.1532 12.4813 11.9696 12.4813 11.7781C12.4813 11.5866 12.4053 11.403 12.27 11.2675L8.01186 7.00933Z"
        fill="currentColor"
      />
    </svg>
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-label="Select…"
      class="p-dropdown-trigger"
      data-pc-section="trigger"
      role="button"
    >
      <span
        class="p-dropdown-trigger-icon p-clickable pi pi-chevron-down"
        data-pc-section="dropdownicon"
        data-pr-overlay-visible="false"
      />
    </div>
  </div>
</div>
`;

exports[`IntegerWidget > renders 1`] = `
<div>
  <span
    class="blong-integer w-full  p-inputnumber p-component p-inputwrapper p-inputnumber-buttons-stacked"
    data-pc-name="inputnumber"
    data-pc-section="root"
  >
    <input
      class="w-full text-right p-inputnumber-input p-inputtext p-component"
      data-pc-name="inputtext"
      data-pc-section="root"
      id="testField"
      inputmode="numeric"
      name="testField"
      role="spinbutton"
      type="text"
      value=""
    />
    <span
      class="p-inputnumber-button-group"
      data-pc-section="buttongroup"
    >
      <button
        aria-hidden="true"
        class="p-inputnumber-button p-inputnumber-button-up p-button p-button-icon-only p-component"
        data-pc-section="incrementbutton"
        tabindex="-1"
        type="button"
      >
        <span
          class="p-button-icon pi pi-angle-up"
          data-pc-section="incrementicon"
        />
      </button>
      <button
        aria-hidden="true"
        class="p-inputnumber-button p-inputnumber-button-down p-button p-button-icon-only p-component"
        data-pc-section="decrementbutton"
        tabindex="-1"
        type="button"
      >
        <span
          class="p-button-icon pi pi-angle-down"
          data-pc-section="decrementicon"
        />
      </button>
    </span>
  </span>
</div>
`;

exports[`IntegerWidget > renders with value 1`] = `
<div>
  <span
    class="blong-integer w-full  p-inputnumber p-component p-inputwrapper p-inputwrapper-filled p-inputnumber-buttons-stacked"
    data-pc-name="inputnumber"
    data-pc-section="root"
  >
    <input
      aria-valuenow="7"
      class="w-full text-right p-inputnumber-input p-inputtext p-component p-filled"
      data-pc-name="inputtext"
      data-pc-section="root"
      id="testField"
      inputmode="numeric"
      name="testField"
      role="spinbutton"
      type="text"
      value="7"
    />
    <span
      class="p-inputnumber-button-group"
      data-pc-section="buttongroup"
    >
      <button
        aria-hidden="true"
        class="p-inputnumber-button p-inputnumber-button-up p-button p-button-icon-only p-component"
        data-pc-section="incrementbutton"
        tabindex="-1"
        type="button"
      >
        <span
          class="p-button-icon pi pi-angle-up"
          data-pc-section="incrementicon"
        />
      </button>
      <button
        aria-hidden="true"
        class="p-inputnumber-button p-inputnumber-button-down p-button p-button-icon-only p-component"
        data-pc-section="decrementbutton"
        tabindex="-1"
        type="button"
      >
        <span
          class="p-button-icon pi pi-angle-down"
          data-pc-section="decrementicon"
        />
      </button>
    </span>
  </span>
</div>
`;

exports[`JsonWidget > renders empty 1`] = `
<div>
  <div
    class="blong-json-widget"
  >
    <textarea
      class="blong-json-input  p-inputtextarea p-inputtext p-component p-inputtextarea-resizable"
      data-pc-name="inputtextarea"
      data-pc-section="root"
      id="testField"
      rows="6"
    />
    <button
      class="p-button-text p-button-sm blong-json-format p-button p-component p-button-icon-only"
      data-pc-name="button"
      data-pc-section="root"
      type="button"
    >
      <span
        class="p-button-icon p-c pi pi-align-left"
        data-pc-section="icon"
      />
      <span
        class="p-button-label p-c"
        data-pc-section="label"
      >
         
      </span>
    </button>
  </div>
</div>
`;

exports[`JsonWidget > renders with object value 1`] = `
<div>
  <div
    class="blong-json-widget"
  >
    <textarea
      class="blong-json-input  p-inputtextarea p-inputtext p-component p-filled p-inputtextarea-resizable"
      data-pc-name="inputtextarea"
      data-pc-section="root"
      id="testField"
      rows="6"
    >
      {
  "key": "value",
  "num": 42
}
    </textarea>
    <button
      class="p-button-text p-button-sm blong-json-format p-button p-component p-button-icon-only"
      data-pc-name="button"
      data-pc-section="root"
      type="button"
    >
      <span
        class="p-button-icon p-c pi pi-align-left"
        data-pc-section="icon"
      />
      <span
        class="p-button-label p-c"
        data-pc-section="label"
      >
         
      </span>
    </button>
  </div>
</div>
`;

exports[`MultiSelectWidget > renders 1`] = `
<div>
  <div
    class="blong-multiselect w-full  p-multiselect p-component p-inputwrapper p-multiselect-chip"
    data-pc-name="multiselect"
    data-pc-section="root"
    data-testid="testField"
  >
    <div
      class="p-hidden-accessible"
      data-p-hidden-accessible="true"
      data-pc-section="hiddeninputwrapper"
    >
      <input
        aria-expanded="false"
        data-pc-section="input"
        id="testField"
        readonly=""
        role="combobox"
        tabindex="0"
        type="text"
        value=""
      />
    </div>
    <div
      class="p-multiselect-label-container"
      data-pc-section="labelcontainer"
    >
      <div
        class="p-multiselect-label p-placeholder"
        data-pc-section="label"
      >
        Select…
      </div>
    </div>
    <div
      class="p-multiselect-trigger"
      data-pc-section="trigger"
    >
      <span
        class="p-multiselect-trigger-icon p-c pi pi-chevron-down"
        data-pc-section="triggericon"
      />
    </div>
  </div>
</div>
`;

exports[`NumberWidget > renders 1`] = `
<div>
  <span
    class="blong-number w-full  p-inputnumber p-component p-inputwrapper"
    data-pc-name="inputnumber"
    data-pc-section="root"
  >
    <input
      class="text-right p-inputnumber-input p-inputtext p-component"
      data-pc-name="inputtext"
      data-pc-section="root"
      id="testField"
      inputmode="numeric"
      name="testField"
      role="spinbutton"
      type="text"
      value=""
    />
  </span>
</div>
`;

exports[`NumberWidget > renders with value and bounds 1`] = `
<div>
  <span
    class="blong-number w-full  p-inputnumber p-component p-inputwrapper p-inputwrapper-filled"
    data-pc-name="inputnumber"
    data-pc-section="root"
  >
    <input
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="42"
      class="text-right p-inputnumber-input p-inputtext p-component p-filled"
      data-pc-name="inputtext"
      data-pc-section="root"
      id="testField"
      inputmode="numeric"
      max="100"
      min="0"
      name="testField"
      role="spinbutton"
      type="text"
      value="42"
    />
  </span>
</div>
`;

exports[`PasswordWidget > renders 1`] = `
<div>
  <div
    class="blong-password w-full  p-password p-component p-inputwrapper p-input-icon-right"
    data-pc-name="password"
    data-pc-section="root"
  >
    <div
      class="p-icon-field p-icon-field-right"
      data-pc-name="iconfield"
      data-pc-section="root"
    >
      <input
        class="w-full p-password-input p-inputtext p-component"
        data-pc-name="inputtext"
        data-pc-section="root"
        id="testField"
        name="testField"
        role="textbox"
        tabindex="0"
        type="password"
        value=""
      />
      <span
        class="p-input-icon"
        data-pc-name="inputicon"
        data-pc-section="root"
      >
        <svg
          aria-checked="true"
          aria-label="Show Password"
          class="p-icon p-password-show-icon"
          data-pc-section="showicon"
          fill="none"
          height="14"
          role="switch"
          tabindex="0"
          viewBox="0 0 14 14"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M0.0535499 7.25213C0.208567 7.59162 2.40413 12.4 7 12.4C11.5959 12.4 13.7914 7.59162 13.9465 7.25213C13.9487 7.2471 13.9506 7.24304 13.952 7.24001C13.9837 7.16396 14 7.08239 14 7.00001C14 6.91762 13.9837 6.83605 13.952 6.76001C13.9506 6.75697 13.9487 6.75292 13.9465 6.74788C13.7914 6.4084 11.5959 1.60001 7 1.60001C2.40413 1.60001 0.208567 6.40839 0.0535499 6.74788C0.0512519 6.75292 0.0494023 6.75697 0.048 6.76001C0.0163137 6.83605 0 6.91762 0 7.00001C0 7.08239 0.0163137 7.16396 0.048 7.24001C0.0494023 7.24304 0.0512519 7.2471 0.0535499 7.25213ZM7 11.2C3.664 11.2 1.736 7.92001 1.264 7.00001C1.736 6.08001 3.664 2.80001 7 2.80001C10.336 2.80001 12.264 6.08001 12.736 7.00001C12.264 7.92001 10.336 11.2 7 11.2ZM5.55551 9.16182C5.98308 9.44751 6.48576 9.6 7 9.6C7.68891 9.59789 8.349 9.32328 8.83614 8.83614C9.32328 8.349 9.59789 7.68891 9.59999 7C9.59999 6.48576 9.44751 5.98308 9.16182 5.55551C8.87612 5.12794 8.47006 4.7947 7.99497 4.59791C7.51988 4.40112 6.99711 4.34963 6.49276 4.44995C5.98841 4.55027 5.52513 4.7979 5.16152 5.16152C4.7979 5.52513 4.55027 5.98841 4.44995 6.49276C4.34963 6.99711 4.40112 7.51988 4.59791 7.99497C4.7947 8.47006 5.12794 8.87612 5.55551 9.16182ZM6.2222 5.83594C6.45243 5.6821 6.7231 5.6 7 5.6C7.37065 5.6021 7.72553 5.75027 7.98762 6.01237C8.24972 6.27446 8.39789 6.62934 8.4 7C8.4 7.27689 8.31789 7.54756 8.16405 7.77779C8.01022 8.00802 7.79157 8.18746 7.53575 8.29343C7.27994 8.39939 6.99844 8.42711 6.72687 8.37309C6.4553 8.31908 6.20584 8.18574 6.01005 7.98994C5.81425 7.79415 5.68091 7.54469 5.6269 7.27312C5.57288 7.00155 5.6006 6.72006 5.70656 6.46424C5.81253 6.20842 5.99197 5.98977 6.2222 5.83594Z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`PasswordWidget > renders with value 1`] = `
<div>
  <div
    class="blong-password w-full  p-password p-component p-inputwrapper p-inputwrapper-filled p-input-icon-right"
    data-pc-name="password"
    data-pc-section="root"
  >
    <div
      class="p-icon-field p-icon-field-right"
      data-pc-name="iconfield"
      data-pc-section="root"
    >
      <input
        class="w-full p-password-input p-inputtext p-component p-filled"
        data-pc-name="inputtext"
        data-pc-section="root"
        id="testField"
        name="testField"
        role="textbox"
        tabindex="0"
        type="password"
        value="secret"
      />
      <span
        class="p-input-icon"
        data-pc-name="inputicon"
        data-pc-section="root"
      >
        <svg
          aria-checked="true"
          aria-label="Show Password"
          class="p-icon p-password-show-icon"
          data-pc-section="showicon"
          fill="none"
          height="14"
          role="switch"
          tabindex="0"
          viewBox="0 0 14 14"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M0.0535499 7.25213C0.208567 7.59162 2.40413 12.4 7 12.4C11.5959 12.4 13.7914 7.59162 13.9465 7.25213C13.9487 7.2471 13.9506 7.24304 13.952 7.24001C13.9837 7.16396 14 7.08239 14 7.00001C14 6.91762 13.9837 6.83605 13.952 6.76001C13.9506 6.75697 13.9487 6.75292 13.9465 6.74788C13.7914 6.4084 11.5959 1.60001 7 1.60001C2.40413 1.60001 0.208567 6.40839 0.0535499 6.74788C0.0512519 6.75292 0.0494023 6.75697 0.048 6.76001C0.0163137 6.83605 0 6.91762 0 7.00001C0 7.08239 0.0163137 7.16396 0.048 7.24001C0.0494023 7.24304 0.0512519 7.2471 0.0535499 7.25213ZM7 11.2C3.664 11.2 1.736 7.92001 1.264 7.00001C1.736 6.08001 3.664 2.80001 7 2.80001C10.336 2.80001 12.264 6.08001 12.736 7.00001C12.264 7.92001 10.336 11.2 7 11.2ZM5.55551 9.16182C5.98308 9.44751 6.48576 9.6 7 9.6C7.68891 9.59789 8.349 9.32328 8.83614 8.83614C9.32328 8.349 9.59789 7.68891 9.59999 7C9.59999 6.48576 9.44751 5.98308 9.16182 5.55551C8.87612 5.12794 8.47006 4.7947 7.99497 4.59791C7.51988 4.40112 6.99711 4.34963 6.49276 4.44995C5.98841 4.55027 5.52513 4.7979 5.16152 5.16152C4.7979 5.52513 4.55027 5.98841 4.44995 6.49276C4.34963 6.99711 4.40112 7.51988 4.59791 7.99497C4.7947 8.47006 5.12794 8.87612 5.55551 9.16182ZM6.2222 5.83594C6.45243 5.6821 6.7231 5.6 7 5.6C7.37065 5.6021 7.72553 5.75027 7.98762 6.01237C8.24972 6.27446 8.39789 6.62934 8.4 7C8.4 7.27689 8.31789 7.54756 8.16405 7.77779C8.01022 8.00802 7.79157 8.18746 7.53575 8.29343C7.27994 8.39939 6.99844 8.42711 6.72687 8.37309C6.4553 8.31908 6.20584 8.18574 6.01005 7.98994C5.81425 7.79415 5.68091 7.54469 5.6269 7.27312C5.57288 7.00155 5.6006 6.72006 5.70656 6.46424C5.81253 6.20842 5.99197 5.98977 6.2222 5.83594Z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`SelectWidget > renders disabled 1`] = `
<div>
  <div
    class="blong-select-wrapper"
    data-testid="testField"
    id="testField"
  >
    <div
      class="blong-select p-selectbutton p-button-group p-component"
      data-pc-name="selectbutton"
      data-pc-section="root"
      role="group"
    />
  </div>
</div>
`;

exports[`SelectWidget > renders with options 1`] = `
<div>
  <div
    class="blong-select-wrapper"
    data-testid="testField"
    id="testField"
  >
    <div
      class="blong-select p-selectbutton p-button-group p-component"
      data-pc-name="selectbutton"
      data-pc-section="root"
      role="group"
    >
      <div
        aria-disabled="false"
        aria-label="A"
        aria-pressed="true"
        class="p-button p-component p-highlight"
        data-pc-section="button"
        role="button"
        tabindex="0"
      >
        <span
          class="p-button-label p-c"
          data-pc-section="label"
        >
          A
        </span>
      </div>
      <div
        aria-disabled="false"
        aria-label="B"
        aria-pressed="false"
        class="p-button p-component"
        data-pc-section="button"
        role="button"
        tabindex="-1"
      >
        <span
          class="p-button-label p-c"
          data-pc-section="label"
        >
          B
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextWidget > renders 1`] = `
<div>
  <span
    class="blong-input-wrapper w-full"
  >
    <input
      class="blong-input w-full p-inputtext p-component"
      data-pc-name="inputtext"
      data-pc-section="root"
      id="testField"
      name="testField"
      value=""
    />
  </span>
</div>
`;

exports[`TextWidget > renders readOnly 1`] = `
<div>
  <span
    class="blong-input-wrapper w-full"
  >
    <input
      class="blong-input w-full p-inputtext p-component p-filled"
      data-pc-name="inputtext"
      data-pc-section="root"
      id="testField"
      name="testField"
      readonly=""
      value="readonly"
    />
  </span>
</div>
`;

exports[`TextWidget > renders with copy button 1`] = `
<div>
  <span
    class="blong-input-wrapper w-full"
  >
    <input
      class="blong-input w-full p-inputtext p-component p-filled"
      data-pc-name="inputtext"
      data-pc-section="root"
      id="testField"
      name="testField"
      value="hello"
    />
    <button
      class="p-button-text p-button-sm blong-input-copy p-button p-component p-button-icon-only"
      data-pc-name="button"
      data-pc-section="root"
      type="button"
    >
      <span
        class="p-button-icon p-c pi pi-copy"
        data-pc-section="icon"
      />
      <span
        class="p-button-label p-c"
        data-pc-section="label"
      >
         
      </span>
    </button>
  </span>
</div>
`;

exports[`TextWidget > renders with error 1`] = `
<div>
  <span
    class="blong-input-wrapper w-full"
  >
    <input
      class="blong-input w-full p-invalid p-inputtext p-component"
      data-pc-name="inputtext"
      data-pc-section="root"
      id="testField"
      name="testField"
      value=""
    />
  </span>
</div>
`;

exports[`TextareaWidget > renders 1`] = `
<div>
  <textarea
    class="blong-textarea w-full  p-inputtextarea p-inputtext p-component p-inputtextarea-resizable"
    data-pc-name="inputtextarea"
    data-pc-section="root"
    id="testField"
    name="testField"
    rows="3"
  />
</div>
`;

exports[`TextareaWidget > renders with value 1`] = `
<div>
  <textarea
    class="blong-textarea w-full  p-inputtextarea p-inputtext p-component p-filled p-inputtextarea-resizable"
    data-pc-name="inputtextarea"
    data-pc-section="root"
    id="testField"
    maxlength="200"
    name="testField"
    rows="3"
  >
    Long text here
  </textarea>
</div>
`;

exports[`TimeWidget > renders 1`] = `
<div>
  <span
    class="blong-time w-full  p-calendar p-component p-inputwrapper p-calendar-w-btn p-calendar-w-btn-right p-calendar-timeonly"
    data-pc-name="calendar"
    data-pc-section="root"
  >
    <input
      aria-autocomplete="none"
      aria-controls="pr_id_74_panel"
      aria-expanded="false"
      aria-haspopup="dialog"
      autocomplete="off"
      class="p-inputtext p-component"
      data-pc-name="inputtext"
      data-pc-section="root"
      id="testField"
      inputmode="none"
      role="combobox"
      type="text"
    />
    <button
      aria-controls="pr_id_74_panel"
      aria-expanded="false"
      aria-haspopup="dialog"
      aria-label="Choose Date"
      class="p-datepicker-trigger p-button p-component p-button-icon-only"
      data-pc-name="button"
      data-pc-section="root"
      tabindex="-1"
      type="button"
    >
      <span
        class="p-button-icon p-c pi pi-calendar"
        data-pc-section="icon"
      />
      <span
        class="p-button-label p-c"
        data-pc-section="label"
      >
         
      </span>
    </button>
  </span>
</div>
`;
